--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.9",
     "razorpay": "^2.9.6",
     "uuid": "^9.0.1"
